add courses state to app.js

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="CourseRoster">
+<html lang="en" ng-app="courseRoster">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="css/bootstrap.css" text="text/css">
+  <link rel="stylesheet" href="css/bootstrap.min.css" text="text/css">
   <script src="lib/angular.js"></script>
-  <script src="angular-ui-router.js"></script>
+  <script src="lib/angular-ui-router.js"></script>
+  <script src=""></script>
   <script src="app.js"></script>
   <title>Course Roster</title>
 </head>
