--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="css/bootstrap.min.css" text="text/css">
   <script src="lib/angular.js"></script>
   <script src="lib/angular-ui-router.js"></script>
-  <script src=""></script>
+  <script src="controllers/CoursesController.js"></script>
   <script src="app.js"></script>
   <title>Course Roster</title>
 </head>
