--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <script src="lib/angular.js"></script>
   <script src="lib/angular-ui-router.js"></script>
   <script src="controllers/CoursesController.js"></script>
+  <script src="services/CoursesFactory.js"></script>
   <script src="app.js"></script>
   <title>Course Roster</title>
 </head>
