add students to a course

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script src="controllers/CoursesController.js"></script>
   <script src="controllers/StudentsController.js"></script>
   <script src="services/CoursesFactory.js"></script>
+  <script src="services/StudentsFactory.js"></script>
   <title>Course Roster</title>
 </head>
 <body>
